--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -1,6 +1,7 @@
-index.max_result_window: 2147483647
+index.max_result_window: 100000
 
 config = {
+  index.max_result_window: 100000,
   host: "http://localhost:9200/",
   transport_options: {
     request: { timeout: 5 }
