--- a/bower.json
+++ b/bower.json
@@ -10,15 +10,18 @@
   ],
   "dependencies": {
     "angular": "latest",
-    "angular-route": "latest",
-    "angular-dragdrop": "latest",
+    "angular-bootstrap": "latest",
     "angular-gridster": "latest",
+    "angular-jwt": "latest",
+    "angular-material": "latest",
+    "angular-messages": "latest",
+    "angular-mocks": "latest",
+    "angular-route": "latest",
     "angular-ui-router": "latest",
     "angular-ui-select": "latest",
-    "angular-mocks": "latest",
-    "angular-bootstrap": "latest",
-    "angular-material": "latest",
-    "angularUtils-disqus": "angular-utils-disqus#^0.4.0"
-
+    "angular-xeditable": "latest",
+    "angularUtils-disqus": "angular-utils-disqus#^0.4.0",
+    "lodash":"latest",
+    "restangular":"latest"
   }
 }
