--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: secondlead_development
+  database: dramastash_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: secondlead_production
+  database: dramastash_production
   username: secondlead
   password: <%= ENV['SECONDLEAD_DATABASE_PASSWORD'] %>
